# geojson

./: CMakeLists.txt  Makefile  README.md  conanfile.txt  geojson_parser.hpp.tmp
include/: all.hpp
include/geojson/: detail.hpp
include/geojson_parser/: parse_geojson.hpp
single-header/: fhamonic_geojson.hpp
single-header/fhamonic/: geojson.hpp
test/: parsing_tests.cpp
